# cookiecutter

./: .gitignore  CONTRIBUTING.rst  README.rst  cookiecutter.json
{{cookiecutter.repo_name}}/: .gitignore  .travis.yml  HACKING.rst  LICENSE  Makefile  README.rst  setup.cfg  test-requirements.txt  tox.ini
{{cookiecutter.repo_name}}/docs/: conf.py  index.rst  installation.rst  usage.rst
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.module_name}}.py
